kubernetes/monitoring/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.48.0
        args:
        - '--config.file=/etc/prometheus/prometheus.yml'
        - '--web.external-url=/prometheus/'
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
        - name: prometheus-slo-rules              
          mountPath: /etc/prometheus/slo-rules.yml
          subPath: slo-rules.yml
        - name: prometheus-slo-alerts            
          mountPath: /etc/prometheus/slo-alerts.yml
          subPath: slo-alerts.yml
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: prometheus-slo-rules
        configMap:
          name: prometheus-slo-rules
      - name: prometheus-slo-alerts
        configMap:
          name: prometheus-slo-alerts
